<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_standard"
            android:fontFamily="@font/black_han_sans"
            android:text="@string/settings"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/editTextGoal"
            android:layout_width="@dimen/button_320dp"
            android:layout_height="@dimen/EditText_90dp"
            android:layout_marginTop="@dimen/margin_standard"
            android:hint="@string/enter_your_goal_for_this_month"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColorHint="#8D6E63" />

        <Spinner
            android:id="@+id/spinnerMonth"
            android:layout_width="@dimen/button_320dp"
            android:layout_height="@dimen/EditText_90dp"
            android:layout_marginTop="@dimen/margin_standard"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/buttonSetGoal"
            android:layout_width="@dimen/button_320dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/set_goal_for_this_month" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
